--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -31,6 +31,9 @@ executable aoc2021
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
+    build-depends:
+        base ^>=4.14.3.0,
+        array ^>= 0.5.4.0,
+        monad-loops ^>= 0.4.3
     hs-source-dirs:   app
     default-language: Haskell2010
