--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -34,6 +34,8 @@ executable aoc2021
     build-depends:
         base ^>=4.14.3.0,
         array ^>= 0.5.4.0,
-        monad-loops ^>= 0.4.3
+        monad-loops ^>= 0.4.3,
+        heap ^>= 1.0.4,
+        containers ^>= 0.6.5.1
     hs-source-dirs:   app
     default-language: Haskell2010
