--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -27,7 +27,26 @@ executable aoc2021
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        Helpers
+        Day1
+        Day2
+        Day3
+        Day4
+        Day5
+        Day6
+        Day7
+        Day8
+        Day9
+        Day10
+        Day11
+        Day12
+        Day13
+        Day14
+        Day15
+        Day16
+        Day17
+        Day18
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
